# adventures-in-c

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: test.yml
adventures_in_c/: CMakeLists.txt
adventures_in_c/src/adventures_in_c/: adventures_in_c.c  doubly_linked_list.c  doubly_linked_list.h  linked_list.c  linked_list.h  linked_list_test.cpp
